kubernetes/hyperlab/namespaces/security/authentik/resources/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
spec:
  rules:
    - host: "hubble.${DOMAIN_PRIVATE}"
      http: &ako
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
    - host: "longhorn.${DOMAIN_PRIVATE}"
      http: *ako
  tls:
    - hosts:
        - "hubble.${DOMAIN_PRIVATE}"
        - "longhorn.${DOMAIN_PRIVATE}"
